@@ -1,6 +1,6 @@
 // 2001-04-06 gdr
 
-// Copyright (C) 2001, 2005 Free Software Foundation, Inc.
+// Copyright (C) 2001, 2005, 2010 Free Software Foundation, Inc.
 //
 // This file is part of the GNU ISO C++ Library.  This library is free
 // software; you can redistribute it and/or modify it under the
@@ -28,6 +28,8 @@
 // the GNU General Public License.
 
 // { dg-do compile }
+// { dg-add-options no_pch }
+
 // { dg-xfail-if "" { { *-*-linux* *-*-darwin* } || { uclibc || newlib } } { "*" } { "" } }
 // { dg-excess-errors "" { target { { *-*-linux* *-*-darwin* } || { uclibc || newlib } } } }
 
