@@ -1,6 +1,6 @@
 # Handlers for additional dg-xxx keywords in tests.
 
-# Copyright (C) 2004, 2005, 2006, 2007 Free Software Foundation, Inc.
+# Copyright (C) 2004, 2005, 2006, 2007, 2010 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -87,4 +87,9 @@ proc dg-require-rvalref { args } {
 	return
     }
     return
+}
+
+proc add_options_for_no_pch { flags } {
+    # This forces any generated and possibly included PCH to be invalid.
+    return "-D__GLIBCXX__=99999999"
 }
